# captcha-resolver

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
captcha_solver/: __init__.py  exceptions.py  logger.py  playwright_solver.py  settings.py  solver.py  utils.py
scripts/: build_finalize.py
tests/: test_playwright.py  test_solver.py  test_utils.py
